# PatchEmbed

./: .gitignore  .travis.yml  CMakeLists.txt  FL_final.dmat  FL_final4.dmat  FL_loop.dmat  README.md  Untitled.ipynb  debug_mst.json  debug_paths.json  debug_paths1.json  debug_paths3.json  debug_paths4.json  example.ipynb  notes.nb  out.mesh  out.mesh_.csv  out.mesh__cutting.stl  out.mesh__opt.stl  out.msh  out.msh_.csv  out.msh__cutting.stl  out.msh__opt.stl  out.msh__simplify.off  run.json  source_target.dmat  test.dmat  test.json
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  example-checkpoint.ipynb
.metals/: metals.lock.db
Xcode/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake
Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  Continuous_cmakeRulesBuildPhase.makeMinSizeRel  Experimental_cmakeRulesBuildPhase.makeRelease  NightlyMemoryCheck_cmakeRulesBuildPhase.makeMinSizeRel  Nightly_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  package_postBuildPhase.makeRelWithDebInfo
Xcode/bcclean.xcodeproj/: project.pbxproj
Xcode/embree/: CTestTestfile.cmake  DartConfiguration.tcl  cmake_install.cmake  embree-config.cmake  uninstall.cmake  uninstall.command
Xcode/glad/: CTestTestfile.cmake  cmake_install.cmake
Xcode/glfw/: CTestTestfile.cmake  cmake_install.cmake
Xcode/imgui/: CTestTestfile.cmake  cmake_install.cmake
Xcode/predicates/: CTestTestfile.cmake  cmake_install.cmake
Xcode/pybind11/: CTestTestfile.cmake  cmake_install.cmake
cmake/: FindLIBIGL.cmake
data/: 1.stl  1.stl_.csv  1.stl_.msh  1.stl__cutting.stl  1.stl__opt.stl  1.stl__simplify.off  Arm-Shoulder_Flat.stl  Arm-Shoulder_Flat.stl_.csv  Arm-Shoulder_Flat.stl_.msh  Arm-Shoulder_Flat.stl__cutting.stl  Arm-Shoulder_Flat.stl__opt.stl  Arm-Shoulder_Flat.stl__simplify.off  Day_13_Gift.stl  GearT5_12.stl  GearT5_12.stl_.csv  GearT5_12.stl_.msh  GearT5_12.stl__cutting.stl  GearT5_12.stl__opt.stl  GearT5_12.stl__simplify.off  Untitled.ipynb  Untitled1.ipynb  WendyHouse-RIGHTGABLE01.stl  WendyHouse-RIGHTGABLE01.stl_.csv  WendyHouse-RIGHTGABLE01.stl_.msh  WendyHouse-RIGHTGABLE01.stl__cutting.stl  WendyHouse-RIGHTGABLE01.stl__opt.stl  WendyHouse-RIGHTGABLE01.stl__simplify.off  auger_screw.stl  bench.mesh_.csv  bench.mesh__cutting.stl  bench.mesh__opt.stl  benchvise_jaw_plate.stl  benchvise_jaw_plate.stl_.csv  benchvise_jaw_plate.stl_.msh  benchvise_jaw_plate.stl__cutting.stl  benchvise_jaw_plate.stl__opt.stl  benchvise_jaw_plate.stl__simplify.off  bimba_hole.constraints  bimba_hole.dmat  bimba_hole.scalars  (+79 more)
data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  tests-checkpoint.ipynb
data/0/: 00000002_1ffb81a71e5b402e966b9341_features_001.yml  10.0_.msh  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__opt.stl  good.mesh__simplify.off
data/1/: 00000003_1ffb81a71e5b402e966b9341_features_002.yml  10.0_.msh  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__opt.stl  good.mesh__simplify.off
data/10/: feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__simplify.off
data/11/: 00000654_d87d11d9c3ca4ee5a88797ae_features_002.yml  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off
data/12/: 00000655_d87d11d9c3ca4ee5a88797ae_features_003.yml  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off
data/13/: 00000658_a40da330321b44f286a27361_features_000.yml  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off
data/14/: 00000022_ad34a3f60c4a4caa99646600_features_002.yml  bench.mesh  bench.mesh_.csv  bench.mesh__cutting.stl  bench.mesh__opt.stl  bench.mesh__simplify.off  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off  out.mesh  out.mesh_.csv  out.mesh__cutting.stl  out.mesh__opt.stl  out.mesh__simplify.off
data/2/: 00001525_e0d35a03b46745259cf8878f_features_000.yml  10.0_.msh  Untitled.ipynb  bench.mesh  bench.mesh_.csv  bench.mesh__cutting.stl  bench.mesh__opt.stl  bench.mesh__simplify.off  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off  good_feat.dmat  out.mesh  out.mesh_.csv  out.mesh__cutting.stl  out.mesh__opt.stl  out.mesh__simplify.off
data/3/: 00000008_9b3d6a97e8de4aa193b81000_features_000.yml  10.0_.msh  10.0__cutting.stl  10.0__opt.stl  10.0__simplify.off  bench.mesh  bench.mesh_.csv  bench.mesh__cutting.stl  bench.mesh__opt.stl  feat.dmat  good.mesh  good.mesh_.csv  good.mesh__cutting.stl  good.mesh__opt.stl  good.mesh__simplify.off  out.mesh  out.mesh_.csv  out.mesh__cutting.stl  out.mesh__opt.stl  out.mesh__simplify.off
data/4/: feat.dmat  good.mesh  (+5 more)
legacy/: BTCMM.cpp  BTCMM.h  Match_Maker.h  Match_Maker_Loop.cpp  Match_Maker_Loop.h  main.cpp  thread_check.cpp
python/: CMakeLists.txt  setup.py
python/cmake/: FindLIBIGL.cmake
python/pybcclean/: bcclean.cpp  bcclean.h  edge.cpp  edge.h  graphcut_cgal.h  kdtree_NN_Eigen.hpp  node.cpp  node.h  pybcclean.cpp
python/pybcclean.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quicktest/: Makefile  qq  quick  quicktest.cpp  test
scripts/: quicktest.sh  test.sh
src/: BTCMM.cpp  Betti.cpp  Betti.h  CellularGraph.cpp  CellularGraph.h  CutGraph.cpp  CutGraph.h  CutMesh.cpp  CutMesh.h  CutMeshTest.cpp  Edge_Dijkstra.cpp  Edge_Dijkstra.h  ExpressionValue.cpp  ExpressionValue.hpp  Hausdorff.cpp  Hausdorff.h  Kruskal.cpp  Kruskal.h  Kruskal.hpp  MMPack.h  MatchMakerDynamic.cpp  MatchMakerDynamic.h  MatchMakerTree.cpp  MatchMakerTree.h  Match_Maker.cpp  Match_Maker.h  Match_Maker_Loop.cpp  Match_Maker_Loop.h  Match_Maker_Tree.cpp  Match_Maker_Tree.h  Patch_Bijection.cpp  Patch_Bijection.h  Sinkhorn.hpp  Skeleton.cpp  Skeleton.h  TraceComplex.cpp  TraceComplex.h  TransferCellGraph.cpp  TransferCellGraph.h  VSA_cgal.hpp  (+72 more)
(+137 files in other folders)
